49
================

05/11/24 Disable deprecated mobile UI
05/11/24 Refactory querybuilder into a separate js file for maintainability
04/11/24 Add locale for Egypt
04/11/24 Fix bug with adoption coordinator not being set from add animal
04/11/24 Show rabies info in banner #1561
01/11/24 Refactor calendarview, csvexport, change_password #1103
01/11/24 FindPet: Record separately when a found report is made #1500
31/10/24 Force movementtypes > 8 to be unadoptable
30/10/24 Prevent SQLite paths breaking file DBFS storage #1559
30/10/24 Place a hard limit of >250 microchips to register in one go
29/10/24 Accidentally removed tattoo/chip date fields from animal_new #1103
25/10/24 New location filters "All Dogs", "All Cats" 
24/10/24 FindPet: Validate we didn't get an error in the report_id
24/10/24 Refactor bulk change animals #1103
23/10/24 Querybuilder: Option to output date of last medical profile
23/10/24 Currency fields should reformat when they lose the focus #1103
22/10/24 Prevent time part of datebroughtin messing up days on shelter calc
22/10/24 When generating Excel sheets, filter out illegal chars
21/10/24 Add "Left Shelter" criteria to querybuilder
20/10/24 Refactor additional fields to use tableform widgets #1103
18/10/24 FindPet: call cancel/transfer-back when registrations fail
17/10/24 When updating flag names via lookups, add a pipe to prevent collisions
16/10/24 Add new showif operand for partial matches (asterisk)
15/10/24 Refactor add animal #1103
14/10/24 Options to enforce strong passwords and 2FA #1538
13/10/24 Do not cache CDN error pages when fetching news
11/10/24 Refactor change_user_settings screen #1103
11/10/24 Standardise "stop publishing" behaviour, ensure log written
11/10/24 Backend work for enforcing 2FA on all users #1538
11/10/24 Remove mobileapp/login_jsonp as redundant for almost 12 months
11/10/24 When processing payments, load the timezone for timestamping
10/10/24 Add underlines back between people on entry slider #1103