@@ -284,6 +284,9 @@ FOUNDANIMALS_FTP_PASSWORD = get_string("foundanimals_ftp_password", "")
 HOMEAGAIN_BASE_URL = get_string("homeagain_base_url", "")
 MADDIES_FUND_TOKEN_URL = get_string("maddies_fund_token_url", "")
 MADDIES_FUND_UPLOAD_URL = get_string("maddies_fund_upload_url", "")
+MYPET_BASE_URL = get_string("mypet_base_url", "")
+MYPET_API_USER = get_string("mypet_api_user", "")
+MYPET_API_KEY = get_string("mypet_api_key", "")
 PETCADEMY_FTP_HOST = get_string("petcademy_ftp_host", "")
 PETCADEMY_FTP_USER = get_string("petcademy_ftp_user", "")
 PETCADEMY_FTP_PASSWORD = get_string("petcademy_ftp_password", "")
